ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-manufacturing/css/prev-next-topic.less
.prev-next-topic {
  .gu-pre-next-wrapper {
    display: flex;
    justify-content: space-between;
    margin: 0.75rem 0;
  }

  .gu-pre-topic_container,
  .gu-next-topic_container {
    display: flex;
    align-items: center;
    max-width: 22.75rem;
    border: 1px solid var(--grey-border);
    border-radius: 0.75rem;
    padding: 1rem 0.5rem;
    gap: 0.5rem;
    background: var(--pre-next-bg);
  }

  .gu-pre-topic_container {
    justify-content: start;
  }

  .gu-next-topic_container {
    justify-content: end;
    text-align: right;
  }

  .gu-pre-next-topic_text-container {
    display: flex;
    flex-direction: column;
  }

  .gu-pre-next-topic_text {
    font-size: var(--body-1-fs);
    line-height: var(--body-1-lh);
    font-weight: var(--fw-h5);
    color: var(--secondary-light);
    margin-bottom: 0;
  }

  .gu-pre-next-topic_link {
    font-size: var(--body-1-fs);
    line-height: var(--body-1-lh);
    font-weight: var(--fw-h4);
    color: var(--primary-color);
    text-decoration: none;
  }

  img[src="/content/dam/guides/common-images/icons/next.svg"],
  img[src="/content/dam/guides/common-images/icons/previous.svg"] {
    filter: invert(80%) sepia(75%) saturate(1000%) hue-rotate(360deg)
      brightness(105%) contrast(105%);
  }

  @media (max-width: 1023px) {
    .gu-pre-next-wrapper {
      margin: 0.75rem 1rem;
    }
  }

  @media (max-width: 1024px) {
    .gu-pre-topic_container,
    .gu-next-topic_container {
      width: auto;
      padding: 0.75rem;
    }
    .gu-pre-next-topic_text {
      font-size: var(--body-2-fs);
      line-height: var(--body-2-lh);
    }
    .gu-pre-next-topic_link {
      font-size: var(--body-2-fs);
      line-height: var(--body-2-lh);
    }
  }

  @media (max-width: 768px) {
    .gu-pre-next-wrapper {
      display: flex;
      flex-direction: row;
      justify-content: space-between;
      margin: 0.75rem 1rem;
      border-radius: 0.75rem;
      border: 1px solid var(--grey-border);
      background-color: var(--pre-next-bg);
      padding: 1rem 0.5rem;
    }
    .gu-pre-topic_container,
    .gu-next-topic_container {
      display: flex;
      align-items: center;
      width: auto;
      border: none;
      padding: 0;
      gap: 0;
    }
    .gu-pre-next-topic_link {
      display: none;
    }
    .gu-pre-next-topic_text {
      color: var(--primary-color);
      font-weight: var(--fw-h4);
      font-size: var(--body-1-fs);
      margin-top: -0.3rem;
    }
  }
}

html#adobeguides-dark-contrast {
  .prev-next-topic {
    .gu-pre-next-topic_link {
      color: var(--yellow-color);
    }
  }
}

